@@ -31,6 +31,7 @@ Application Changes:
 - Added the ability to (re-)open the Master Index and/or Character Roster forms through the Tools menu.
 - Purchasing windows no longer crash when using Chummer in a language that uses commmas as decimal separators. Fixes #4771.
 - Updated the Translator tool to recognize built-in settings names to be translated.
+- All weapon stat-modifying entries for ammo that is loaded into a weapon are now exported as part of the weapon's `clip` node, not just bonus damage and bonus range.
 
 Data Changes:
 - One with the Matrix I, II, and III can no longer be taken multiple times.
